# VESC-UART-Minimal

./: .gitignore  CMakeLists.txt  MotorBridgeServer.jl  MotorHAL.jl  README.md  fprime_motor_client.py  telemetry_reader_autoreconnect_fixed.py
Components/: CMakeLists.txt  MotorBridge.bak  create_motorbridge.sh  create_motorbridge_stage8.sh  create_motorbridge_stage8_cpp.sh  create_motorbridge_testdriver.sh
Components/MotorBridge/: CMakeLists.txt  MotorBridge.cpp  MotorBridge.hpp  MotorBridge.xml.bak  MotorBridgeComponentAi.xml  create_motorbridge_fpp.sh
Components/MotorBridgeComponent/: MotorBridge.fpp
Components/MotorBridgeComponent/fpp/: MotorBridge.fpp
Components/MotorBridgeComponent/include/Components/: MotorBridgeComponentAc.hpp
Components/MotorBridgeComponent/src/Components/: MotorBridgeComponentAc.cpp
Deployments/MotorDeployment/: MotorDeployment.cpp
TestDriver/: Makefile
build_vesc_ramp/: CMakeCache.txt  Makefile  cmake_install.cmake  minimal_vesc_ramp
src/: main.cpp
